sort.basic.cocktail.AlgCocktailSort1.scala.error
Erreur de compilation :
AlgCocktailSort1:11: error: ')' expected but '}' found.
    }
    ^AlgCocktailSort1:17: error: ')' expected but '}' found.
    }
    ^AlgCocktailSort1:19: error: illegal start of simple expression
   }
   ^AlgCocktailSort1:20: error: 'while' expected but '}' found.
} 
^