sort.basic.cocktail.AlgCocktailSort1.scala.code
def cocktailSort() {
  var len = getNombreValeurs()
  var inversion = false
  do {
    for (i <- 0 to len-2) {
      if (getValeur(i)>getValeur(i+1) {
      	echange(i,i+1)
        inversion = true
      }
    }
    for (i <- len-2 to 0 by -1) {
       if (getValeur(i)>getValeur(i+1) {
      	echange(i,i+1)
        inversion = true
       }
    }
   while (inversion)
   }
}